<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".CreateAccountActivity">

    <ProgressBar
        android:id="@+id/createacc_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:progressBarStyleLarge"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/acc_login_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/username_account"
            android:hint="@string/user_name_hint"
            android:fontFamily="@font/comfortaa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:paddingBottom="16dp"/>

        <AutoCompleteTextView
            android:id="@+id/email_acc"
            android:hint="@string/email_hint"
            android:fontFamily="@font/comfortaa"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/password_acc"
            android:hint="@string/password_hint"
            android:fontFamily="@font/comfortaa"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


        <Button
            android:id="@+id/create_account"
            android:textColor="@color/primaryTextColor"
            android:text="@string/create"
            android:fontFamily="@font/comfortaa_bold"
            android:background="@android:color/transparent"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>