<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:text="@string/title_name"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp" />

    <RelativeLayout
        android:id="@+id/relative"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            app:cardElevation="5dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="70dp">
            
            <TextView
                android:id="@+id/worryText"
                android:layout_gravity="center"
                android:hint="@string/eat_worry"
                android:fontFamily="@font/comfortaa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/Get_started"
        android:textColor="@color/primaryTextColor" />
</LinearLayout>